Sort selected and unselected options into two lists

--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script type="text/javascript" src="./multiselect.js"></script>
+    <script defer type="text/javascript" src="./multiselect.js"></script>
   </head>
   <body>
     <multi-select>
