Added value getter

--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
     <script defer type="text/javascript" src="./multiselect.js"></script>
   </head>
   <body>
-    <multi-select>
+    <multi-select id="ms">
       <option value="1">One</option>
       <option value="2" selected>Two</option>
       <option value="3">Three</option>
