Fixed a couple of style bugs

--- a/test.html
+++ b/test.html
@@ -21,6 +21,11 @@
                 <option value="3">Option Three</option>
                 <option value="4">Option Four</option>
                 <option value="5">Option Five</option>
+                <option value="6">Option Six</option>
+                <option value="7">Option Seven</option>
+                <option value="8">Option Eight</option>
+                <option value="9">Option Nine</option>
+                <option value="10">Option Ten</option>
               </multi-select>
             </div>
             <button type="submit" class="btn btn-primary">Submit Form</button>
