--- a/test.html
+++ b/test.html
@@ -15,7 +15,9 @@
           <form method="POST">
             <div class="mb-3">
               <label for="ms" class="form-label">Select multiple options:</label>
-              <multi-select id="ms" name="ms" class="d-block">
+              <multi-select id="ms" name="ms">
+                <span slot="available-label">📋 Available Options</span>
+                <span slot="selected-label">✅ Selected Items</span>
                 <option value="1">Option One</option>
                 <option value="2" selected>Option Two</option>
                 <option value="3">Option Three</option>
