Set component to visible in constructor

--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
           <form method="POST">
             <div class="mb-3">
               <label for="ms" class="form-label">Select multiple options:</label>
-              <multi-select id="ms" name="ms">
+              <multi-select id="ms" name="ms" style="visibility: hidden;">
                 <span slot="available-label">📋 Available Options</span>
                 <span slot="selected-label">✅ Selected Items</span>
                 <option value="1">Option One</option>
